--- a/css/footer.css
+++ b/css/footer.css
@@ -151,9 +151,9 @@ h3{
     text-decoration: underline;
     height: 10%;
     widows: 100%;
+    padding: 5% 0;
 }
 .footer .container .copyright h5{
-    margin-top: 70px;
     font-size: 12px;
 } 
 
