--- a/css/cards.css
+++ b/css/cards.css
@@ -1,129 +1,100 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background: #222;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+
+.cards{
     width: 100%;
-}
-.containers{
+    min-height: 100vh;
     position: relative;
-    width: 1000px;
-    height: 100%;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 60px;
 }
-.containers .cards{
+.cards ._card{
+    width: 80%;
+    min-height: 300px;
     position: relative;
-    width: 45%;
-    min-height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: white;
     border: 0;
-    margin-bottom: 40px;
+    border-radius: 10px;
+    margin: 40px 10%;
 }
-.containers .cards .image{
-    display: flex;
-    align-items: center;
-    position: absolute;
-    justify-content: center;
-    background:#555;
+.cards ._card .image{
     width: 100%;
     height: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
     z-index: 1;
-    transition: 0.5s ease-in-out;
+    transition: 1s;
 }
 
-.containers .cards:hover .image{
+.cards ._card:hover .image{
     width: 150px;
     height: 150px;
     left: -75px;
-    background: #ff0057;
-    transition: 0.5s ease-in-out;
+    background: #1d643b;
+    transition: 1s;
+}
+.cards ._card:hover .image img{
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+}
+.cards ._card .image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
-.containers .cards .image img{
-    width: 80%;
-    height: 80%;
-}
-
-.containers .cards .content{
-    position: absolute;
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    right: 0;
-    transition: 0.5s ease-in-out;
-    width: calc(100% - 75px);
-    padding: 20px;
-}
-.containers .cards:hover .content{
+.cards ._card .content{
+    width: calc(80% - 80px);
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
     transition: 0.5s ease-in-out;
 }
-
-.containers .cards .content p{
+.cards ._card .content p{
     margin: 10px auto;
 }
 
-.containers .cards .content a{
+.cards ._card .content a{
     display: block;
-    width: 120px;
     text-decoration: none;
     text-align: center;
+    font-size: 12px;
     color: #ff0057;
     padding: 10px 20px;
     border: 1px solid #222;
     border-radius: 10px;
     transition: 0.5s ease-in-out;
 }
-.containers .cards .content a:hover{
+.cards ._card .content a:hover{
     background: #ff0057;
-    color: #333;
+    color: #fff;
     transition: 0.5s ease-in-out;
-    border: 0;
+    border-color: #ff0057;
 }
-@media (max-width: 992px){
-    .containers{
-        flex-flow: column;
-        margin-top: 40px;
+@media (max-width: 493px){
+    .cards ._card{
+        margin-top: 40%;
     }
-    .containers .cards{
-        width: 80%;
-        margin-bottom: 40px;
-    }
-}
-@media (max-width: 600px){
-    .containers .cards{
-        width: 80%;
-        height: 250px;
-        margin-bottom: 20px;
-    }
-    .containers .cards .image{
+    .cards ._card .image{
         z-index: 0;
-        top: 0;
-        height: 100px;
+        top: -50%;
+        height: 50%;
     }
-    .containers .cards:hover .image{
+    .cards ._card:hover .image{
         left: 0;
         width: 100%;
-        height: 100px;
-
     }
-        .containers .cards .content{
-        width: 100%;
-        height: 150px;
+    .cards ._card:hover .image img{
+        width: 98%;
+    }
+    .cards ._card .content{
+        height: 50%;
+        width: 90%;
         left: 0;
-        top: 100px;
     }
 }
 
