--- a/css/footer.css
+++ b/css/footer.css
@@ -42,7 +42,7 @@ h3{
     color: #53D367;
 }
 .footer .social a:nth-of-type(3) i:hover{
-    color: #405DE6;
+    color: #DE4B75;
 }
 .footer .social a:nth-of-type(4) i:hover{
     color: #DC5246;
